# yume

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml  render-staging.yaml  render.yaml  start.sh  workplan.md
.github/workflows/: deploy.yml  evals.yml
alembic/: env.py
alembic/versions/: 20251228_0826-43dd6ae1bd09_initial_schema.py  20251230_0706-1edaed9a34f6_add_spot_and_staff_service_mappings.py  20260106_1807-dc7f251c8c33_add_onboarding_sessions_table.py  20260107_1828-9e06fdca4153_add_whatsapp_connection_fields_to_.py  20260127_1000-a1b2c3d4e5f6_add_execution_traces_table.py  20260127_1100-b2c3d4e5f6a7_rename_customer_staff_terminology.py  20260127_1200-c3d4e5f6a7b8_rename_metadata_to_trace_metadata.py  20260203_0900-d4e5f6a7b8c9_add_first_message_at_and_permission_level.py  20260203_0930-e5f6a7b8c9d0_rename_onboarding_started_to_initiated.py  20260203_1000-f6a7b8c9d0e1_add_staff_onboarding_sessions_table.py  20260203_1100-g7h8i9j0k1l2_add_customer_flow_sessions_table.py  20260203_1200-h8i9j0k1l2m3_add_end_customer_profile_fields.py  20260203_1300-i9j0k1l2m3n4_add_function_traces_table.py  20260207_1000-l2m3n4o5p6q7_make_end_customer_id_nullable.py
app/: config.py  database.py  main.py
app/ai/: client.py  prompts.py  tools.py
app/api/: admin_deps.py  deps.py
app/models/: __init__.py  appointment.py  associations.py  auth_token.py  availability.py  conversation.py  customer_flow_session.py  end_customer.py  execution_trace.py  function_trace.py  location.py  message.py  onboarding_session.py  (+6 more)
docs/: PROJECT_SPEC.md  WHATSAPP_SETUP.md  architecture.md  conventions.md  deployment.md  quality.md  testing.md
frontend/: nixpacks.toml  package-lock.json  package.json  vitest.config.ts
landing_page/: index.html
parlo-landing/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
scripts/: lint_golden_rules.py  seed_staging.py  seed_test_data.py  setup_organization.py  test_webhook.py  validate_docs.py
tests/: conftest.py
(+143 files in other folders)
