[project]
name = "yume"
version = "0.1.0"
description = "WhatsApp-native AI scheduling assistant for beauty businesses in Mexico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and web server
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database and ORM
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Pydantic and validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",

    # Redis and Celery
    "redis>=5.0.0",
    "celery>=5.4.0",

    # OpenAI API
    "openai>=1.50.0",

    # Anthropic Claude API (legacy)
    "anthropic>=0.39.0",

    # HTTP client
    "httpx>=0.27.0",

    # Phone number handling
    "phonenumbers>=8.13.0",

    # Timezone handling
    "pytz>=2024.1",

    # Environment variables
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",

    # Linting and formatting
    "ruff>=0.7.0",
    "mypy>=1.13.0",

    # Development tools
    "ipython>=8.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
